<resources>
    <string name="app_name">CubeHelper</string>
    <string name="all_solves">Solves</string>
    <string name="scramble">Scramble: \n%s</string>
    <string name="time_default">%02d:%02d.%03d</string>
    <string name="num_of_solves">Number of solves: %d</string>
    <string name="best_solve">Best solve: %s</string>
    <string name="worst_solve">Worst solve: %s</string>
    <string name="average_of">Average of %d: %s</string>
    <string name="average_of_comp">Average of 5(comp): %s</string>
    <string name="timer_info">Tap and hold,\nthen release to start</string>
    <string name="timer_running_info">Tap to stop</string>
    <string name="algorithm_of_the_day">Your algorithm of the day</string>
    <string name="timer">Timer</string>
    <string name="learn">Learn</string>
    <string name="daily">Daily</string>
    <string name="tbt">3x3</string>
    <string name="permutationShort">%s perm</string>
    <string name="oll">%d oll</string>
    <string name="coll">%s coll</string>
    <string name="winter_variation">%s winter variation</string>
    <string name="pll">%s pll</string>
    <string name="wv">%s wv</string>
    <string name="alg_selection">Algorithm selection</string>
    <string name="cube">cube</string>
    <string name="algorithm">Algorithm</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="book">Book</string>
</resources>