<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:minHeight="80dp"
        android:maxHeight="80dp"
        android:id="@+id/algListItemBack">

    <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/cube"
            android:id="@+id/algListCube"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/cube"
            android:background="@color/transparent"/>

    <TextView
            android:text="@string/permutationShort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/algListName"
            android:textSize="16sp"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textStyle="bold"
            android:background="@color/transparent"/>

    <EditText
            android:text="@string/algorithm"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:id="@+id/algListAlg"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/algListName"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toStartOf="@+id/algListCube"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:textStyle="italic"
            android:textAlignment="center"
            android:textIsSelectable="true"
            android:inputType="text"
            android:autofillHints=""
            tools:ignore="LabelFor"
            android:background="@color/transparent"/>

</androidx.constraintlayout.widget.ConstraintLayout>