<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragments.TimerFragment" android:textAlignment="center">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="@string/timer_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/timer"
                app:layout_constraintTop_toBottomOf="@+id/scramble"
                android:layout_marginTop="20dp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:textSize="34sp" android:textAlignment="center"/>
        <TextView
                android:text="@string/timer_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tapAndHold"
                app:layout_constraintTop_toBottomOf="@+id/timer"
                android:layout_marginTop="40dp" android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"/>
        <TextView
                android:text="@string/all_solves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/allSolves"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="5dp" android:layout_marginEnd="5dp"/>
        <TextView
                android:text="@string/scramble"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/scramble"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="150dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="100dp" android:layout_marginEnd="100dp"
                app:layout_constraintEnd_toEndOf="parent" android:textSize="24sp" android:textAlignment="center"/>
        <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="0dp" app:layout_constraintTop_toBottomOf="@+id/tapAndHold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="40dp"
                android:paddingStart="20dp" android:paddingEnd="20dp" android:gravity="start|end"
                android:id="@+id/solvesAll">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:id="@+id/solvesLeft" android:gravity="bottom"
                    android:paddingBottom="20dp"
                    android:layout_alignParentStart="true" android:layout_toStartOf="@+id/solvesRight"
                    android:layout_marginEnd="0dp">
                <TextView
                        android:text="@string/last_solve"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/lastSolve"
                        android:textSize="16sp"/>
                <TextView
                        android:text="@string/best_solve"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/bestSolve"
                        android:layout_marginTop="10dp"
                        android:textSize="16sp"/>
                <TextView
                        android:text="@string/worst_solve"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/worstSolve"
                        android:layout_marginTop="10dp"
                        android:textSize="16sp"/>
                <TextView
                        android:text="@string/average_of"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/averageOf1000"
                        android:layout_marginTop="10dp"
                        android:textSize="16sp"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/solvesRight"
                    android:gravity="bottom|end"
                    android:paddingStart="0dp"
                    android:paddingBottom="20dp"
                    android:paddingEnd="20dp"
                    android:layout_alignParentEnd="true">
                <TextView
                        android:text="@string/average_of"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/averageOf5"
                        android:layout_marginTop="10dp"
                        android:textSize="16sp"/>
                <TextView
                        android:text="@string/average_of"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/averageOf10"
                        android:layout_marginTop="10dp"
                        android:textSize="16sp"/>
                <TextView
                        android:text="@string/average_of"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/averageOf12"
                        android:layout_marginTop="10dp"
                        android:textSize="16sp"/>
                <TextView
                        android:text="@string/average_of"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/averageOf100"
                        android:layout_marginTop="10dp"
                        android:textSize="16sp"/>
            </LinearLayout>
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>